--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,11 @@
     "@angular/router": "~11.0.1",
     "bootstrap": "4.1.1",
     "font-awesome": "^4.7.0",
+    "install": "^0.13.0",
     "ngx-bootstrap": "^6.2.0",
+    "ngx-toaster": "^1.0.1",
+    "ngx-toastr": "^13.2.0",
+    "npm": "^6.14.9",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
